<resources>
    <string name="app_name">Going-Somewhere</string>
    <string name="action_save">SAVE</string>

    <string name="desc_main_img">main trip images</string>
    <string name="button_text_plan">Plans</string>
    <string name="button_text_notes">Notes</string>
    <string name="trip_title">Trip Title</string>
    <string name="cities">City name</string>
    <string name="from_tv">From</string>
    <string name="to_tv">To</string>
    <string name="desc_delete_this_city">delete this city</string>

    <string name="place_name_txt">Place Name</string>
    <string name="add_new_place">Add new Place</string>
    <string name="error_add_fields">Please add the not completed fields</string>
    <string name="empty_view_image">empty_view_image</string>
    <string name="you_have_no_plans_yet">You have no plans yet</string>
    <string name="get_started_by_adding_some">Get started by adding some</string>
    <string name="trip_added">Trip Added Successfully</string>
    <string name="sure_delete">Delete current trip?</string>
    <string name="yes_delete">Delete</string>
    <string name="dont_delete">No, Stay</string>
    <string name="trip_deleted">Trip deleted successfully</string>
    <string name="error_deleting">Error deleting this trip</string>
    <string name="add_title">Please add trip title</string>
    <string name="add_city">Please add one city at least</string>
    <string name="add_date_from">Specify a starting date</string>
    <string name="add_date_to">Specify an ending date</string>
    <string name="add_to_after">Must be after start date</string>
    <string name="error_updating_trip">Nothing to update</string>
    <string name="editor_update_trip_successful">Trip updated successfully</string>
    <string name="action_delete">Delete</string>
    <string name="empty" />
    <string name="place_added">Place added</string>
    <string name="error_updating_place">Nothing to update</string>
    <string name="update_place_successful">Place updated successfully</string>
    <string name="save_this_place">Save this place</string>
    <string name="err_add_title">Please add place details</string>
    <string name="edit_place">Edit Place</string>
    <string name="edit_trip">Edit Trip</string>
    <string name="add_as_widget">Add as widget</string>
    <string name="share_trip">share_trip</string>
    <string name="need_connection">Need connection to show place details</string>
    <string name="ad_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="place_deleted">This place deleted</string>
    <string name="error_deleing">Error deleting this place</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="trip_image">Trip image</string>
    <string name="transition_photo" translatable="false">transitionPhoto</string>
    <string name="trip_widget">trip widget</string>
    <string name="specify_trip">Please specify a trip from inside the app</string>
    <string name="add_the_new_place">Add the new place</string>
    <string name="cities_array">Cities</string>
    <string name="widget_updated">Widget updated</string>
    <string name="edit_trip_hard_string">Edit Trip</string>
    <string name="save_trip">Save trip</string>
    <string name="coordinator_layout">coordinator layout</string>
    <string name="adview_test_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="rating_bar">rating bar</string>
    <string name="add_new_city">add new city</string>
    <string name="edit_this_trip">Edit this trip</string>
    <string name="add_new_trip">Add new trip</string>
</resources>
