<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/trips_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/dp_8"
    android:background="@color/lightBackground"
    card_view:cardCornerRadius="@dimen/dp_4"
    card_view:cardElevation="@dimen/dp_4">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_place"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_220"
            android:adjustViewBounds="true"
            android:contentDescription="@string/desc_main_img"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:transitionName="@string/transition_photo"
            tools:targetApi="lollipop" />

        <TextView
            android:id="@+id/text_place_title"
            style="@style/main_card_text"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_24"
            android:drawablePadding="@dimen/dp_8"
            android:drawableStart="@drawable/ic_title_black_24dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_place" />

        <TextView
            android:id="@+id/text_place_adress"
            style="@style/main_card_text"
            android:drawablePadding="@dimen/dp_8"
            android:drawableStart="@drawable/ic_date_range_black_24dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="@+id/text_place_title"
            app:layout_constraintTop_toBottomOf="@+id/text_place_title" />

        <TextView
            android:id="@+id/tex_place_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_48"
            android:drawablePadding="@dimen/dp_8"
            android:drawableStart="@drawable/ic_location_city_black_24dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_place_title" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginBottom="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toTopOf="@+id/btn_edit_trip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_place_adress" />

        <Button
            android:id="@+id/btn_edit_trip"
            style="@style/main_card_buttons"
            android:layout_marginStart="@dimen/dp_24"
            android:text="@string/edit_trip"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <Button
            android:id="@+id/btn_add_trip_widget"
            style="@style/main_card_buttons"
            android:layout_marginStart="@dimen/dp_16"
            android:text="@string/add_as_widget"
            app:layout_constraintStart_toEndOf="@+id/btn_edit_trip"
            app:layout_constraintTop_toTopOf="@+id/btn_edit_trip" />


    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>