<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/trips_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    card_view:cardCornerRadius="@dimen/dp_4"
    card_view:cardElevation="@dimen/dp_4">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_trip"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_180"
            android:contentDescription="@string/desc_main_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/common_google_signin_btn_icon_dark" />

        <TextView
            android:id="@+id/text_trip_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_8"
            android:drawableStart="@drawable/ic_title_black_24dp"
            android:text="Trip Title"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_trip" />

        <TextView
            android:id="@+id/text_trip_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:drawableStart="@drawable/ic_date_range_black_24dp"
            android:text="trip duration"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            app:layout_constraintStart_toStartOf="@+id/text_trip_title"
            app:layout_constraintTop_toBottomOf="@+id/text_trip_title" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_trip_duration" />

        <Button
            android:id="@+id/btn_trip_plans"
            style="@style/main_card_buttons"
            android:layout_marginStart="@dimen/dp_24"
            android:text="@string/button_text_plan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <Button
            android:id="@+id/btn_trip_notes"
            style="@style/main_card_buttons"
            android:layout_marginStart="@dimen/dp_32"
            android:text="@string/button_text_notes"
            app:layout_constraintStart_toEndOf="@+id/btn_trip_plans"
            app:layout_constraintTop_toBottomOf="@+id/view" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>